<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingHorizontal="24dp"
    tools:context=".ui.main.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp"
            android:focusableInTouchMode="true"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <include
                android:id="@+id/device_id"
                layout="@layout/layout_copy_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/app_id"
                layout="@layout/layout_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/device_token"
                layout="@layout/layout_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/device_encryption_key"
                layout="@layout/layout_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:background="@color/login_with_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/login_with"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/login_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login with"
                    android:textColor="@color/login_with_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:background="@color/login_with_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/login_with"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/sign_in_button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_login_btn"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:id="@+id/sign_in_button_google_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="Google"
                    android:textAlignment="center"
                    android:textColor="@drawable/background_rounded_login_btn_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_in_button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:background="@drawable/background_rounded_login_btn"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:id="@+id/sign_in_button_facebook_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="Facebook"
                    android:textAlignment="center"
                    android:textColor="@drawable/background_rounded_login_btn_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_in_button_apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_login_btn"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_apple" />

                <TextView
                    android:id="@+id/sign_in_button_apple_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="Apple"
                    android:textAlignment="center"
                    android:textColor="@drawable/background_rounded_login_btn_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btn_social_execute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_rounded_social_execute_btn"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_social_execute" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_execute_challenge"
                            android:textColor="@color/text_prompt"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_execute_challenge_sub"
                            android:textColor="@color/circlepw_otp_hint_text"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_social_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:linksClickable="true"
                    android:textColorLink="@color/blue_main"
                    tools:text="@string/label_guide" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>